# xeye

./: .gitignore  .readthedocs.yaml  README.md  build.sh  dataset.npz  pyproject.toml  requirements.txt  setup.cfg
docs/: conf.py  index.rst  modules.rst  xeye.rst  xeye.tools.rst  xeye.usb.rst
docs/_build/doctrees/: environment.pickle  index.doctree  modules.doctree  xeye.doctree  xeye.tools.doctree  xeye.usb.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js  xeye.html  xeye.tools.html  xeye.usb.html
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/xeye/: build_dataset.html  dataset.html  fast_dataset.html  manual_dataset.html
docs/_build/html/_modules/xeye/tools/: build_dataset.html
docs/_build/html/_modules/xeye/usb/: dataset.html  fast_dataset.html  manual_dataset.html
docs/_build/html/_sources/: index.rst.txt  modules.rst.txt  xeye.rst.txt  xeye.usb.rst.txt
docs/_build/html/_static/: custom.css  documentation_options.js
examples/: README.md
examples/pytorch/: PytorchMultiClassification.ipynb
examples/tensorflow/: TensorflowBinaryClassification.ipynb  TensorflowBinaryClassificationConvolution.ipynb
examples/xeye-example/: dataset.py  fastdataset.py  manualdataset.py
examples/xeye-example/builddataset/: a.npz  b.npz  build_a.py  build_b.py  builddataset.py  dataset.npz
notebook/pytorch/: PytorchMultiClassification.ipynb
notebooks/pytorch/: PytorchBinaryClassificationConvolution.ipynb  PytorchBinaryClassificationFeedForward.ipynb  PytorchMultiClassification.ipynb
notebooks/pytorch/.ipynb_checkpoints/: PytorchBinaryClassificationConvolution-checkpoint.ipynb
notebooks/tensorflow/: TensorflowBinaryClassification.ipynb  TensorflowBinaryClassificationConvolution.ipynb  TensorflowMultiClassification.ipynb
src/eyeshield/: datapipe.py
src/xeye/: __build_dataset.py  __init__.py  __manual_dataset.py  datapipe.py  dataset.py  fast_dataset.py  manual_dataset.py
tests/: test_exp.py  test_rtsp.py  test_usb.py
tests/dataset/rtsp/: test_dataset_rtsp.py
tests/dataset/usb/: test_dataset_usb.py
xeye/: __init__.py  build_dataset.py  dataset.py  exp.py  fast_dataset.py  manual_dataset.py
xeye/rtsp/: __init__.py  dataset.py
xeye/tools/: __init__.py
xeye/usb/: __init__.py  dataset.py  fast_dataset.py  manual_dataset.py
