[metadata]
name = xeye
version = 0.0.2
author = Marco Salvalaggio
author_email = mar.salvalaggio@gmail.com
description = Create dataset for computer vision application
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Glue-Coder/xeye
project_urls =
    Bug Tracker = https://github.com/Glue-Coder/xeye
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src